# Cross-Axis-Correction

./: README.md  pyproject.toml
docs/: OVERVIEW.md
scripts/analysis/: run_reclassify.sh
scripts/calibration/: build_calibration.sh
scripts/launchers/: download_model.sh  run_gemma.sh  run_llama.sh  run_parallel.sh  run_qwen.sh
scripts/setup/: bootstrap.sh
scripts/sweeps/: run_steer_layer_sweep.sh  run_steer_layer_sweep_jbb_compliance.sh  run_steer_layer_sweep_mixed.sh  run_steer_layer_sweep_mixed_lowsweep.sh  run_steer_probe.sh  run_steer_scopes.sh  run_sweep_detect.sh
src/crosscap/analysis/: bootstrap_results.py  diagnose_axes.py  reclassify_refusals.py
src/crosscap/calibration/: classify_calibration.py  double_check_labels.py  generate_calibration.py
src/crosscap/core/: run_crosscap.py
src/crosscap/sweeps/: steer_layer_sweep.py  steer_layer_sweep_jbb_compliance.py  steer_layer_sweep_mixed.py  steer_probe.py  sweep_detect_thresholds.py
